# Image_Filtering_Upsampling

./: CMakeLists.txt  README.md
results/Lena/BF/: time.txt
results/Lena/JBF/: time.txt
src/: gui.cu  main.cu  points.cu
